------------------------------------------------------------------------------

Compiling for iOS is now possible.
Also a new platform independent lib/dll is now available with a new, simple interface to request (some of) the internal data.
Fix -listxml for strings that contain embedded tags

pinPROC : updated library;  VS2019 build
YAML-cpp: updated to 0.6.3; VS2019 build

*** CORE/CPU ***
Improved Atari Generation 1 sound emulation, rewritten similar to the style of the Gen 2 one
Tweaks to Atari Generation 2 emulation, too
Added Regama driver
Wico's Af-Tor fully working now
Sped up Video Dens games, found more dip switches, switch test, saving NVRAM
E.F.O. sound board mostly working - a strange issue with IRQ concurrency remains which sometimes causes a sound hangup
Sound support for early LTD system III
More sound found for LTD system 4 (extra lamp data is handled by sound chip port write!)
Inverted sound bits for early Playmatic games, tone frequencies left as noted in the schematics though, seem a little off
More solenoids found for LTD's Force & Haunted Hotel
More lamps found for LTD's Space Poker
Increased IRQ for LTD system III, helps with ball detection in outhole
Corrected CPU clock for Peyper / Sonic games, helps speeding up Gamatron game start
Doubled ZC frequency for Joctronic games, saving NVRAM
Enabled coin settings on early Playmatic games
Support 4-solenoid stepper motor mech used by High Roller Casino, Starship Troopers, and Playboy
Fixed 8085A DSUB instruction for the H register
Fixed a bug in the TMS9995 emulation concerning port data writes
Make color/brightness mappings of Data East 128x16 DMDs match the real hardware
Fix an old regression of Alvin G. solenoids not firing consistently (most notably breaking Mystery Castle)
Improve DMD timings for the Sega 192x64 DMD, matching the real one more closely (also a slight improvement for the DE/Sega/Stern 128x32 ones)
Improve IRQ timings of Sys3/4/6/7/11, DE and the Sega 192x64 DMD-machines